--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ExempleUnitTest-2017-01</groupId> <!-- à changer par le nom du groupe -->
-    <artifactId>ExempleUnitTest</artifactId> <!-- et le nom du projet -->
+    <groupId>map-to-json</groupId> <!-- à changer par le nom du groupe -->
+    <artifactId>jackson</artifactId> <!-- et le nom du projet -->
     <version>1.0-SNAPSHOT</version>
 
 
